# signaldeck-plugin-main

./: README.md  pyproject.toml
signaldeck_plugin_main/: plugin.py
signaldeck_plugin_main/locales/: de.json  en.json
signaldeck_plugin_main/processors/chart/: chart_display_data.py  chart_processor.py
signaldeck_plugin_main/processors/cmd/: cmd.py
signaldeck_plugin_main/processors/dummy_data/: data.py  dummy_display_data.py
signaldeck_plugin_main/processors/fernotron/: transmitter.py
signaldeck_plugin_main/processors/home_connect/: hc.py
signaldeck_plugin_main/processors/logger/: logger.py
signaldeck_plugin_main/processors/modbus/: modbus.py  modbus_pool.py
signaldeck_plugin_main/processors/mqtt/: mqtt_subscriber.py
signaldeck_plugin_main/processors/randInt/: randInt.py
signaldeck_plugin_main/processors/rclone/: rclone.py
signaldeck_plugin_main/samples/Data/: config.json
signaldeck_plugin_main/static/css/chart/: style.css
signaldeck_plugin_main/static/js/: chart.js
signaldeck_plugin_main/templates/main/: chart.html  cmd.html  dummy_data.html
